<resources>
    <string name="app_name">Movies Review</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="now_playing">Now Playing</string>
    <string name="more">More</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="banner">This is movie banner</string>
    <string name="popular">Popular</string>
    <string name="name_line">This is name movie</string>
    <string name="poster_item_description">Poster item description</string>
    <string name="namemovie">Movie Name</string>
    <string name="movielong">0min</string>
    <string name="timeMovie">D M YYYY</string>
    <string name="kindmovie">Genre</string>
    <string name="ratemovie">0.0/10</string>
    <string name="title">Title</string>
    <string name="describeMovie">DescribeMovie</string>
    <string name="overview">Overview</string>
    <string name="trailer">Trailer</string>
    <string name="thumbnail_image_view_desc">Thumnail Video</string>
    <string name="name_cast_line">Name cast</string>
    <string name="cast_description">This is cast image</string>
    <string name="cast">Cast</string>
    <string name="background_video">Background thumnail video</string>
    <string name="play_button">Play button</string>
    <string name="remove_favorite_movie">Remove from favorite list</string>
    <string name="add_favorite_movie">Added to favorite list</string>
    <string name="this_is_logo">This is logo image</string>
    <string name="facebook_app_id">2124482791137155</string>
    <string name="fb_login_protocol_scheme">fb2124482791137155</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="invite_friends">Invite friends</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="this_is_cover">This is cover facebook</string>
    <string name="this_is_avatar">This is avatar facebook user</string>
    <string name="double_back">Please click BACK again to exit!</string>
    <string name="no_results_found">No results found!</string>
    <string name="no_favorite_movies">You haven\'t favored any movies!</string>
    <string name="truyen_mail">tdtruyen92lmq@gmail.com</string>
    <string name="thang_mail">huynhthanhthang1296@gmail.com</string>
    <string name="subject_email">Report bugs</string>
    <string name="content_email">I want to report bugs\n\n- Movie: \n\n- My device: \n\n- I have a problem: </string>
    <string name="title_choice_app">Send email</string>
    <string name="image_no_results">No results image</string>
    <string name="this_is_ads_image">This is ads image</string>
</resources>
