<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/dp_5"
    >
    <ImageView
        android:id="@+id/image_poster_item"
        android:layout_width="@dimen/dp_172"
        android:layout_height="@dimen/dp_255"
        android:background="@color/colorNoImage"
        android:contentDescription="@string/poster_item_description"
        android:scaleType="fitXY"
        />
    <LinearLayout
        android:layout_width="@dimen/dp_172"
        android:layout_height="@dimen/dp_54"
        android:layout_below="@id/image_poster_item"
        android:background="@color/titleBackground"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/text_name_item"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_54"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="@dimen/dp_7"
            android:text="@string/name_line"
            android:textColor="@color/colorTitle"
            android:textSize="@dimen/sp_15"
            />
        <ImageView
            android:id="@+id/image_favorite_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dp_7"
            android:layout_marginRight="@dimen/dp_7"
            android:src="@drawable/ic_favorite"
            android:contentDescription="@string/favorite_icon"
            />
    </LinearLayout>
</RelativeLayout>
