<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.main.MainActivity"
    style="@style/BackgroundTheme"
    >

    <RelativeLayout
        android:id="@+id/relative_profile_guest"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="invisible"
        >
        <Button
            android:id="@+id/button_login_profile"
            android:layout_width="@dimen/dp_150"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_guest_button"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_15"
            />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_profile_facebook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <FrameLayout
                android:id="@+id/frame_cover"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_250"
                >
                <ImageView
                    android:id="@+id/image_cover"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_200"
                    android:background="@color/colorNoImage"
                    android:contentDescription="@string/this_is_cover"
                    android:scaleType="fitXY"
                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_avatar"
                    android:layout_width="@dimen/dp_90"
                    android:layout_height="@dimen/dp_90"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_75"
                    android:contentDescription="@string/this_is_avatar"
                    app:civ_border_color="@color/colorWhite"
                    app:civ_border_width="@dimen/dp_2"
                    />

            </FrameLayout>

            <TextView
                android:id="@+id/text_name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frame_cover"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_22"
                android:textStyle="bold"
                />

            <View
                android:id="@+id/view_invite"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@+id/text_name_user"
                android:layout_marginTop="@dimen/dp_18"
                android:background="@color/colorView"
                />
            <TextView
                android:id="@+id/text_invite_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_invite"
                android:drawableLeft="@drawable/ic_invite"
                android:drawablePadding="@dimen/dp_7"
                android:drawableStart="@drawable/ic_invite"
                android:padding="@dimen/dp_15"
                android:text="@string/invite_friends"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16"
                />
            <View
                android:id="@+id/view_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@+id/text_invite_friend"
                android:background="@color/colorView"
                />

            <TextView
                android:id="@+id/text_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_setting"
                android:drawableLeft="@drawable/ic_settings"
                android:drawablePadding="@dimen/dp_7"
                android:drawableStart="@drawable/ic_settings"
                android:padding="@dimen/dp_15"
                android:text="@string/setting"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16"
                />
            <View
                android:id="@+id/view_about"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@+id/text_setting"
                android:background="@color/colorView"
                />
            <TextView
                android:id="@+id/text_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_about"
                android:drawableLeft="@drawable/ic_info"
                android:drawablePadding="@dimen/dp_7"
                android:drawableStart="@drawable/ic_info"
                android:padding="@dimen/dp_15"
                android:text="@string/about"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16"
                />
            <View
                android:id="@+id/view_feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@+id/text_about"
                android:background="@color/colorView"
                />
            <TextView
                android:id="@+id/text_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_feedback"
                android:drawableLeft="@drawable/ic_feedback"
                android:drawablePadding="@dimen/dp_7"
                android:drawableStart="@drawable/ic_feedback"
                android:padding="@dimen/dp_15"
                android:text="@string/feedback"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16"
                />
            <View
                android:id="@+id/view_logout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@+id/text_feedback"
                android:background="@color/colorView"
                />
            <TextView
                android:id="@+id/text_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_logout"
                android:drawableLeft="@drawable/ic_logout"
                android:drawablePadding="@dimen/dp_7"
                android:drawableStart="@drawable/ic_logout"
                android:padding="@dimen/dp_15"
                android:text="@string/logout"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_16"
                />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>
