<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.detailsmovie.DetailsMovieActivity"
    style="@style/BackgroundTheme"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorNoImage"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorView"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >
            <ImageView
                android:id="@+id/image_backdrop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:contentDescription="@string/appbar_scrolling_view_behavior"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_detail_movie"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.Light"
                app:title="@string/namemovie"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            >

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="@dimen/dp_135"
                android:layout_height="@dimen/dp_200"
                android:layout_marginBottom="@dimen/dp_12"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/colorNoImage"
                android:contentDescription="@string/appbar_scrolling_view_behavior"
                android:scaleType="fitXY"
                />

            <TextView
                android:id="@+id/text_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_toEndOf="@id/image_poster"
                android:layout_toRightOf="@id/image_poster"
                android:contentDescription="@string/appbar_scrolling_view_behavior"
                android:text="@string/timeMovie"
                android:textColor="@color/colorDescription"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/image_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_release_date"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_toEndOf="@id/image_poster"
                android:layout_toRightOf="@id/image_poster"
                android:contentDescription="@string/appbar_scrolling_view_behavior"
                android:src="@drawable/ic_alarm"
                />

            <TextView
                android:id="@+id/text_run_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/image_clock"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_toEndOf="@id/image_clock"
                android:layout_toRightOf="@id/image_clock"
                android:contentDescription="@string/appbar_scrolling_view_behavior"
                android:text="@string/movielong"
                android:textColor="@color/colorDescription"
                android:textSize="@dimen/sp_18"
                />

            <ImageView
                android:id="@+id/image_kind_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_clock"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_toEndOf="@id/image_poster"
                android:layout_toRightOf="@id/image_poster"
                android:contentDescription="@string/appbar_scrolling_view_behavior"
                android:src="@drawable/ic_assignment"
                />

            <TextView
                android:id="@+id/text_kind_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/image_kind_movie"
                android:layout_below="@id/text_run_time"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_toEndOf="@id/image_kind_movie"
                android:layout_toRightOf="@id/image_kind_movie"
                android:contentDescription="@string/appbar_scrolling_view_behavior"
                android:paddingEnd="@dimen/dp_10"
                android:paddingLeft="0dp"
                android:paddingRight="@dimen/dp_10"
                android:paddingStart="0dp"
                android:text="@string/kindmovie"
                android:textColor="@color/colorDescription"
                android:textSize="@dimen/sp_18"
                />

            <TextView
                android:id="@+id/text_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_kind_movie"
                android:layout_marginLeft="@dimen/dp_5"
                android:layout_marginStart="@dimen/dp_5"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_toEndOf="@id/image_rate"
                android:layout_toRightOf="@id/image_rate"
                android:text="@string/ratemovie"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/image_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/text_rate"
                android:layout_below="@id/image_kind_movie"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginStart="@dimen/dp_12"
                android:layout_toEndOf="@id/image_poster"
                android:layout_toRightOf="@id/image_poster"
                android:contentDescription="@string/appbar_scrolling_view_behavior"
                android:src="@drawable/ic_star"
                />

            <View
                android:id="@+id/view_overview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@+id/image_poster"
                android:layout_marginTop="@dimen/dp_10"
                android:background="@color/colorView"
                />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_overview"
                android:padding="@dimen/dp_10"
                android:text="@string/overview"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_25"
                />

            <TextView
                android:id="@+id/text_describe_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_overview"
                android:paddingLeft="@dimen/dp_12"
                android:paddingRight="@dimen/dp_12"
                android:text="@string/describeMovie"
                android:textColor="@color/colorText"
                android:textSize="@dimen/dp_16"
                />

            <View
                android:id="@+id/view_trailer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@+id/text_describe_movie"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/colorView"
                />

            <TextView
                android:id="@+id/text_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_trailer"
                android:padding="@dimen/dp_10"
                android:text="@string/trailer"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_25"
                />

            <FrameLayout
                android:id="@+id/frame_trailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/text_trailer"
                android:layout_marginBottom="@dimen/dp_20"
                >
                <FrameLayout
                    android:id="@+id/frame_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_202"
                    />
                <com.google.android.youtube.player.YouTubeThumbnailView
                    android:id="@+id/youtube_thumnail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_202"
                    android:contentDescription="@string/thumbnail_image_view_desc"
                    android:scaleType="centerCrop"
                    />
                <RelativeLayout
                    android:id="@+id/relative_play"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_202"
                    >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_202"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/background_video"
                        android:src="@color/colorBackgroundVideo"
                        />

                    <ImageView
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="@dimen/dp_50"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_play_circle"
                        android:contentDescription="@string/play_button"
                        />
                </RelativeLayout>
            </FrameLayout>

            <View
                android:id="@+id/view_cast"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_below="@+id/frame_trailer"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/colorView"
                />
            <TextView
                android:id="@+id/text_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_cast"
                android:padding="@dimen/dp_10"
                android:text="@string/cast"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_25"
                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_cast"
                />
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_favorite"
        android:layout_width="@dimen/dp_60"
        android:layout_height="@dimen/dp_60"
        android:layout_marginEnd="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:scaleType="center"
        android:src="@drawable/ic_favorite_border"
        app:elevation="@dimen/dp_6"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="@dimen/dp_12"
        />

</android.support.design.widget.CoordinatorLayout>
