<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.main.MainActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.vankien96.mooview.widget.AutoScrollViewPager
            android:id="@+id/view_pager_ads"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:layout_marginTop="@dimen/dp_3"
            />

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/circle_indicator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_20"
            android:layout_below="@+id/view_pager_ads"
            android:layout_marginTop="@dimen/dp_10"
            app:ci_gravity="center"
            app:ci_width="@dimen/dp_5"
            app:ci_height="@dimen/dp_5"
            app:ci_orientation="horizontal"
            />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_below="@+id/circle_indicator"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_50"
            android:background="@color/colorView"
            />

        <LinearLayout
            android:id="@+id/linear_now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            >
            <TextView
                android:id="@+id/text_now_playing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/now_playing"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/button_more_now_playing"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_30"
                android:background="@drawable/more_button"
                android:text="@string/more"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_249"
            android:layout_below="@+id/linear_now_playing"
            />

        <LinearLayout
            android:id="@+id/linear_up_coming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler_now_playing"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            >
            <TextView
                android:id="@+id/text_up_coming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/upcoming"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                />
            <Button
                android:id="@+id/button_more_up_coming"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_30"
                android:background="@drawable/more_button"
                android:text="@string/more"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_up_coming"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_249"
            android:layout_below="@+id/linear_up_coming"
            />
    </RelativeLayout>
</ScrollView>
    

